--- a/README
+++ b/README
@@ -25,8 +25,10 @@ Dependencies
 * urllib
 * urllib2
 * simplejson
-* pastescript
+* pastescript 
 * hashlib
+* BeautifulSoup (html/xml parser)
+* mako (templating engine)
 
 Most of the dependencies are python default.
 
